--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -13,14 +13,13 @@
 
 It improves GPL 3 or later compatibility.
 
-#### {doc}`/reference/commands/delete`: Added support for referenced weight vector
+#### {doc}`/reference/commands/delete`: Added support for reference weight vector
 
-If a referenced column is indexed, `delete` can also delete the
-deleted referenced value from the referenced column. It works for a
-referenced vector column but didn't work for a referenced "weight"
-vector column.
+If a reference column is indexed, `delete` can also delete the deleted
+reference value from the reference column. It works for a reference
+vector column but didn't work for a reference "weight" vector column.
 
-With this release, this also works for a referenced "weight" vector
+With this release, this also works for a reference "weight" vector
 column.
 
 ### Fixes
@@ -32,7 +31,6 @@ Groonga casts a value automatically when it's needed.
 If a reference vector column uses 32-bit floating number weight and a
 new value is a no weight reference vector, Groonga must cast the new
 value. But it was not done.
-
 
 <!-- prettier-ignore-start -->
 (release-14-1-1)=
