--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.1.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Sutou Kouhei <kou@clear-code.com>  Tue, 24 Dec 2024 02:45:26 -0000
+
 groonga (14.1.1-1) unstable; urgency=low
 
   * New upstream release.
