--- a/doc/locale/ja/LC_MESSAGES/reference/log.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/log.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2022-02-09 09:45+0900\n"
+"PO-Revision-Date: 2025-01-27 16:34+0900\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -36,131 +36,134 @@ msgstr "プロセスログのフォーマットは以下の通りです。::"
 msgid "Some multi-process based applications such as :doc:`/reference/executables/groonga-httpd` and `PGroonga <https://pgroonga.github.io/>`_ use the following format::"
 msgstr ":doc:`/reference/executables/groonga-httpd` や `PGroonga <https://pgroonga.github.io/ja/>`_ といったマルチプロセスベースのアプリケーションでのフォーマットは以下の通りです。::"
 
+msgid "Example::"
+msgstr "実行例::"
+
+msgid "Example with PID::"
+msgstr "実行例（PIDを含む場合）::"
+
+msgid "``TIME_STAMP``"
+msgstr ""
+
 msgid "It's time stamp uses the following format::"
 msgstr "タイムスタンプのフォーマットは次の通りです。::"
 
-msgid "YYYY"
+msgid "Description"
+msgstr "説明"
+
+msgid "``YYYY``"
 msgstr ""
 
 msgid "Year with four digits."
 msgstr "年（4桁）"
 
-msgid "MM"
+msgid "``MM``"
 msgstr ""
 
 msgid "Month with two digits."
 msgstr "月（2桁）"
 
-msgid "DD"
+msgid "``DD``"
 msgstr ""
 
 msgid "Day with two digits."
 msgstr "日（2桁）"
 
-msgid "hh"
+msgid "``hh``"
 msgstr ""
 
 msgid "Hour with two digits."
 msgstr "時（2桁）"
 
-msgid "mm"
+msgid "``mm``"
 msgstr ""
 
 msgid "Minute with two digits."
 msgstr "分（2桁）"
 
-msgid "ss"
+msgid "``ss``"
 msgstr ""
 
 msgid "Second with two digits."
 msgstr "秒（2桁）"
 
-msgid "SSSSSS"
+msgid "``SSSSSS``"
 msgstr ""
 
 msgid "Microsecond with six digits."
 msgstr "マイクロ秒（6桁）"
 
-msgid "Example::"
-msgstr "実行例::"
-
-msgid "TIME_STAMP"
+msgid "``L``"
 msgstr ""
 
 msgid "Log level with a character. Here is a character and log level map."
 msgstr "ログレベル（1文字）。文字がどのログレベルに対応するかは次の通りです。"
 
-msgid "E"
+msgid "``E``"
 msgstr ""
 
 msgid "Emergency"
 msgstr "緊急"
 
-msgid "A"
+msgid "``A``"
 msgstr ""
 
 msgid "Alert"
 msgstr "アラート"
 
-msgid "C"
+msgid "``C``"
 msgstr ""
 
 msgid "Critical"
 msgstr "危機的"
 
-msgid "e"
+msgid "``e``"
 msgstr ""
 
 msgid "Error"
 msgstr "エラー"
 
-msgid "w"
+msgid "``w``"
 msgstr ""
 
 msgid "Warning"
 msgstr "警告"
 
-msgid "n"
+msgid "``n``"
 msgstr ""
 
 msgid "Notification"
 msgstr "通知"
 
-msgid "i"
+msgid "``i``"
 msgstr ""
 
 msgid "Information"
 msgstr "情報"
 
-msgid "d"
+msgid "``d``"
 msgstr ""
 
 msgid "Debug"
 msgstr "デバッグ"
 
-msgid "\\-"
+msgid "``-``"
 msgstr ""
 
 msgid "Dump"
 msgstr "ダンプ"
 
-msgid "L"
+msgid "``PID``"
 msgstr ""
 
 msgid "The process ID."
 msgstr "プロセスID。"
 
-msgid "PID"
+msgid "``MESSAGE``"
 msgstr ""
 
 msgid "Details about the log with free format."
 msgstr "自由形式でのログの詳細。"
-
-msgid "MESSAGE"
-msgstr ""
-
-msgid "Example with PID::"
-msgstr "実行例（PIDを含む場合）::"
 
 msgid "Query log"
 msgstr "クエリーログ"
@@ -171,50 +174,53 @@ msgstr "クエリーログはデフォルトでは無効になっています。
 msgid "Query log uses the following formats::"
 msgstr "クエリーログのフォーマットは次の通りです。::"
 
+msgid "``ID``"
+msgstr ""
+
 msgid "ID of a thread. Groonga process creates threads to process requests concurrently. Each thread outputs some logs for a request. This ID can be used to extract a log sequence by a thread."
 msgstr "スレッドのID。Groongaプロセスは並列に複数のリクエストを処理するためにスレッドを作ります。各スレッドは1つのリクエストにつき複数のログを出力します。このIDを使うとスレッド毎の一連のログを抽出できます。"
 
-msgid "ID"
+msgid "``QUERY_STATUS``"
 msgstr ""
 
-msgid ">"
+msgid "``>``"
 msgstr ""
 
 msgid "A character that indicates query is started."
 msgstr "クエリーが始まったことを示す文字。"
 
-msgid ":"
+msgid "``:``"
 msgstr ""
 
 msgid "A character that indicates query is processing."
 msgstr "クエリーが処理中であることを示す文字。"
 
-msgid "<"
+msgid "``<``"
 msgstr ""
 
 msgid "A character that indicates query is finished."
 msgstr "クエリーが完了したことを示す文字。"
 
+msgid "``QUERY``"
+msgstr ""
+
 msgid "A query to be processed."
 msgstr "処理対象のクエリー。"
 
-msgid "QUERY"
+msgid "``ELAPSED_TIME``"
 msgstr ""
 
 msgid "Elapsed time in nanoseconds since query is started."
 msgstr "クエリーの処理を開始してからの時間。単位はナノ秒。"
 
-msgid "ELAPSED_TIME"
+msgid "``PROGRESS``"
 msgstr ""
 
 msgid "A processed work at the time."
 msgstr "このときに処理した内容。"
 
-msgid "PROGRESS"
+msgid "``RETURN_CODE``"
 msgstr ""
 
 msgid "A return code for the query."
 msgstr "クエリーのリターンコード。"
-
-msgid "RETURN_CODE"
-msgstr ""
