--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,6 +1,131 @@
 # News - 14 series
 
 <!-- prettier-ignore-start -->
+(release-14-1-3)=
+## Release 14.1.3 - 2025-01-29
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### {ref}`offline-index-construction`: Added support for parallel execution
+
+If you have many CPU cores, you can improve
+{ref}`offline-index-construction` performance. You can use it by
+`column_create ... COLUMN_INDEX ... --n_workers -1`.
+
+In general, {ref}`offline-index-construction` will be 2-10x faster by
+this.
+
+#### {doc}`/reference/functions/language_model_vectorize`: Added support for Phi-4
+
+You can use [Phi-4](https://huggingface.co/microsoft/phi-4) as a
+language model. Note that Phi-4 isn't designing for generating
+embeddings.
+
+#### Added `NormalizerNFKC`
+
+It's similar to existing `NormalizerNFKC*` such as
+{doc}`/reference/normalizers/normalizer_nfkc150`. But it's more
+generic than `NormalizerNFKC*`.
+
+`NormalizerNFKC` accepts `version` argument to change used Unicode
+version. For example, `NormalizerNFKC("version", "15.0.0")` equals to
+`NormalizerNFKC150`.
+
+`NormalizerNFKC*` are deprecated by it. You should use
+`NormalizerNFKC` for newly written applications.
+
+`NormalizerNFKC` uses Unicode 16.0.0 by default.
+
+#### Added `TokenFilterNFKC`
+
+It's similar to existing `TokenFilterNFKC*` such as
+{doc}`/reference/token_filters/token_filter_nfkc150`. But it's based
+on `NormalizerNFKC`. So you can specify Unicode version as `version`.
+
+`TokenFilterNFKC*` are deprecated by it. You should use
+`TokenFilterNFKC` for newly written applications.
+
+`TokenFilterNFKC` uses Unicode 16.0.0 by default.
+
+#### {doc}`/install/amazon_linux`: Added support for Amazon Linux 2023 aarch64
+
+See {doc}`/install/amazon_linux` how to install.
+
+#### {doc}`/reference/commands/index_column_diff`: Added support for changing log level for progress logs
+
+It's useful to see only progress logs without other debug logs.
+
+See {ref}`index-column-diff-progress-log-level` for details.
+
+### Fixes
+
+#### Fixed a bug that deb/rpm packages can't be used on machines that don't have AVX
+
+pgroonga/pgroonga#642
+
+Groonga uses llama.cpp to use language models. llama.cpp uses SIMD for
+fast processing.
+
+We defer llama.cpp initialization that needs SIMD. So you can use
+Groonga on machines that don't have AVX if you don't use language
+model related features such as
+{doc}`/reference/functions/language_model_vectorize`.
+
+Reported by Yuki Shira.
+
+#### {ref}`table-pat-key`: Fixed a bug that existing key may be broken after {doc}`/reference/commands/defrag`
+
+If you have some garbage nodes in {ref}`table-pat-key` and
+{doc}`/reference/commands/defrag` it, new added keys to the
+{ref}`table-pat-key` might override existing keys.
+
+This bug exists since {ref}`release-14-1-1`.
+
+#### {ref}`table-pat-key`: Fixed a bug that some WALs are missing for {doc}`/reference/commands/defrag`
+
+This release added some missing WALs on
+{doc}`/reference/commands/defrag`. If some WALs are missing, we may
+not be able to recover a crash in {doc}`/reference/commands/defrag`.
+
+#### {doc}`/reference/commands/defrag`: Fixed a bug that columns of {ref}`table-pat-key` aren't processed
+
+GH-2168
+
+`defrag pat` should process `pat` and its columns. But it processes
+only `pat` since {ref}`release-14-1-1`. It's a regression bug.
+
+#### {doc}`/reference/columns/index`: Fixed an {ref}`offline-index-construction` bug
+
+It happened when:
+
+- Source is a {ref}`reference-vector-column`
+- Source has a `GRN_ID_NIL` element (an element that refers nothing)
+  between `1..-2` position
+- Index column has `WITH_POSITION` flag
+
+Offline index construction always uses wrong position for elements
+after the `GRN_ID_NIL` element.
+
+Offline index construction may use wrong index key. It depends on an
+uninitialized memory.
+
+#### {ref}`table-hash-key`: Fixed a bug that garbage entry may not be reused
+
+It happened when a {ref}`table-hash-key` is rehashed with
+garbage. Garbage is increased by deleting records.
+
+If rehash is done with garbage, the garbage is never reused after the
+rehash. A {ref}`table-pat-key` may large even when it has only a few
+valid records.
+
+This bug exists since {ref}`release-10-1-1`.
+
+### Thanks
+
+- Yuki Shira
+
+<!-- prettier-ignore-start -->
 (release-14-1-2)=
 ## Release 14.1.2 - 2024-12-24
 <!-- prettier-ignore-end -->
