docs: NormalizerNFKC*: Fix the translation

--- a/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc100.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc100.po
@@ -34,7 +34,7 @@ msgid "Syntax"
 msgstr "構文"
 
 msgid "``NormalizerNFKC100`` has optional parameter."
-msgstr "``TokenFilterNFKC100`` は省略可能な引数があります。"
+msgstr "``NormalizerNFKC100`` は省略可能な引数があります。"
 
 msgid "No options::"
 msgstr "オプションなし::"
