--- a/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc130.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc130.po
@@ -34,7 +34,7 @@ msgid "Syntax"
 msgstr "構文"
 
 msgid "``NormalizerNFKC130`` has optional parameter."
-msgstr "``TokenFilterNFKC130`` は省略可能な引数があります。"
+msgstr "``NormalizerNFKC130`` は省略可能な引数があります。"
 
 msgid "No options::"
 msgstr "オプションなし::"
