--- a/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc121.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc121.po
@@ -21,6 +21,12 @@ msgstr "実行例::"
 msgid "``NormalizerNFKC121``"
 msgstr ""
 
+msgid "Use :doc:`./normalizer_nfkc` instead."
+msgstr "代わりに :doc:`./normalizer_nfkc` をご利用ください。"
+
+msgid "``NormalizerNFKC121`` and ``NormalizerNFKC(\"version\", \"12.1.0\")`` are equal."
+msgstr "``NormalizerNFKC121`` は ``NormalizerNFKC(\"version\", \"12.1.0\")`` と同じです。"
+
 msgid "Summary"
 msgstr "概要"
 
