--- a/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc130.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc130.po
@@ -21,6 +21,12 @@ msgstr "実行例::"
 msgid "``NormalizerNFKC130``"
 msgstr ""
 
+msgid "Use :doc:`./normalizer_nfkc` instead."
+msgstr "代わりに :doc:`./normalizer_nfkc` をご利用ください。"
+
+msgid "``NormalizerNFKC130`` and ``NormalizerNFKC(\"version\", \"13.0.0\")`` are equal."
+msgstr "``NormalizerNFKC130`` は ``NormalizerNFKC(\"version\", \"13.0.0\")`` と同じです。"
+
 msgid "Summary"
 msgstr "概要"
 
