--- a/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc121.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc121.po
@@ -40,7 +40,7 @@ msgid "Syntax"
 msgstr "構文"
 
 msgid "``NormalizerNFKC121`` has optional parameter."
-msgstr "``TokenFilterNFKC121`` は省略可能な引数があります。"
+msgstr "``NormalizerNFKC121`` は省略可能な引数があります。"
 
 msgid "No options::"
 msgstr "オプションなし::"
