--- a/doc/locale/ja/LC_MESSAGES/reference/token_filters/token_filter_nfkc100.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/token_filters/token_filter_nfkc100.po
@@ -21,6 +21,12 @@ msgstr "実行例::"
 msgid "``TokenFilterNFKC100``"
 msgstr ""
 
+msgid "Use :doc:`./token_filter_nfkc` instead."
+msgstr "代わりに :doc:`./token_filter_nfkc` をご利用ください。"
+
+msgid "``TokenFilterNFKC100`` and ``TokenFilterNFKC(\"version\", \"10.0.0\")`` are equal."
+msgstr "``TokenFilterNFKC100`` は ``TokenFilterNFKC(\"version\", \"10.0.0\")`` と同じです。"
+
 msgid "Summary"
 msgstr "概要"
 
