docs: news 14.1.3: Set a link to the added document

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -22,31 +22,31 @@ You can use [Phi-4](https://huggingface.co/microsoft/phi-4) as a
 language model. Note that Phi-4 isn't designing for generating
 embeddings.
 
-#### Added `NormalizerNFKC`
+#### Added {doc}`/reference/normalizers/normalizer_nfkc`
 
 It's similar to existing `NormalizerNFKC*` such as
 {doc}`/reference/normalizers/normalizer_nfkc150`. But it's more
 generic than `NormalizerNFKC*`.
 
-`NormalizerNFKC` accepts `version` argument to change used Unicode
+{doc}`/reference/normalizers/normalizer_nfkc` accepts `version` argument to change used Unicode
 version. For example, `NormalizerNFKC("version", "15.0.0")` equals to
 `NormalizerNFKC150`.
 
 `NormalizerNFKC*` are deprecated by it. You should use
-`NormalizerNFKC` for newly written applications.
+{doc}`/reference/normalizers/normalizer_nfkc` for newly written applications.
 
-`NormalizerNFKC` uses Unicode 16.0.0 by default.
+{doc}`/reference/normalizers/normalizer_nfkc` uses Unicode 16.0.0 by default.
 
-#### Added `TokenFilterNFKC`
+#### Added {doc}`/reference/token_filters/token_filter_nfkc`
 
 It's similar to existing `TokenFilterNFKC*` such as
 {doc}`/reference/token_filters/token_filter_nfkc150`. But it's based
-on `NormalizerNFKC`. So you can specify Unicode version as `version`.
+on {doc}`/reference/normalizers/normalizer_nfkc`. So you can specify Unicode version as `version`.
 
 `TokenFilterNFKC*` are deprecated by it. You should use
-`TokenFilterNFKC` for newly written applications.
+{doc}`/reference/token_filters/token_filter_nfkc` for newly written applications.
 
-`TokenFilterNFKC` uses Unicode 16.0.0 by default.
+{doc}`/reference/token_filters/token_filter_nfkc` uses Unicode 16.0.0 by default.
 
 #### {doc}`/install/amazon_linux`: Added support for Amazon Linux 2023 aarch64
 
