--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -28,7 +28,7 @@ It's similar to existing `NormalizerNFKC*` such as
 {doc}`/reference/normalizers/normalizer_nfkc150`. But it's more
 generic than `NormalizerNFKC*`.
 
-{doc}`/reference/normalizers/normalizer_nfkc` accepts `version` argument to change used Unicode
+{doc}`/reference/normalizers/normalizer_nfkc` accepts {ref}`normalizer-nfkc-version` argument to change used Unicode
 version. For example, `NormalizerNFKC("version", "15.0.0")` equals to
 `NormalizerNFKC150`.
 
@@ -41,7 +41,7 @@ version. For example, `NormalizerNFKC("version", "15.0.0")` equals to
 
 It's similar to existing `TokenFilterNFKC*` such as
 {doc}`/reference/token_filters/token_filter_nfkc150`. But it's based
-on {doc}`/reference/normalizers/normalizer_nfkc`. So you can specify Unicode version as `version`.
+on {doc}`/reference/normalizers/normalizer_nfkc`. So you can specify Unicode version as {ref}`normalizer-nfkc-version`.
 
 `TokenFilterNFKC*` are deprecated by it. You should use
 {doc}`/reference/token_filters/token_filter_nfkc` for newly written applications.
